--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js: node
 jobs:
   include:
-    - stage: Unit Tests
+    - stage: Unit tests
       script:
       - npm run lint
       - |
