--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "npm run lint:eslint && npm run lint:lit",
     "lint:eslint": "eslint . --ext .js,.html",
     "lint:lit": "lit-analyzer htmleditor.js demo test",
-    "start": "es-dev-server --app-index demo/index.html --node-resolve --dedupe --open --watch",
+    "start": "es-dev-server --node-resolve --dedupe --open --watch",
     "test": "npm run lint && npm run test:headless && npm run test:diff",
     "test:diff": "mocha ./**/*.visual-diff.js -t 40000",
     "test:diff:golden": "mocha ./**/*.visual-diff.js -t 40000 --golden",
