Add style linting.

--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "htmleditor.js"
   ],
   "scripts": {
-    "lint": "npm run lint:eslint && npm run lint:lit",
+    "lint": "npm run lint:eslint && npm run lint:style && npm run lint:lit",
     "lint:eslint": "eslint . --ext .js,.html",
     "lint:lit": "lit-analyzer htmleditor.js demo test",
+    "lint:style": "stylelint \"**/*.js\"",
     "start": "es-dev-server --node-resolve --dedupe --open --watch",
     "test": "npm run lint && npm run test:headless && npm run test:diff",
     "test:diff": "mocha ./**/*.visual-diff.js -t 40000",
@@ -25,6 +26,7 @@
   "author": "D2L Corporation",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@brightspace-ui/stylelint-config": "^0.0.1",
     "@brightspace-ui/visual-diff": "^1",
     "@open-wc/testing": "^2",
     "@open-wc/testing-karma": "^4",
@@ -40,7 +42,8 @@
     "karma-sauce-launcher": "^4.1.4",
     "lit-analyzer": "^1",
     "mocha": "~8.0.1",
-    "puppeteer": "^5"
+    "puppeteer": "^5",
+    "stylelint": "^13"
   },
   "dependencies": {
     "@brightspace-ui/core": "^1",
