--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:diff:golden:commit": "commit-goldens",
     "test:headless": "karma start",
     "test:headless:watch": "karma start --auto-watch=true --single-run=false",
-    "test:sauce": "karma start karma.sauce.conf.js"
+    "test:sauce": "karma start"
   },
   "author": "D2L Corporation",
   "license": "Apache-2.0",
