--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "/components",
     "/generated",
     "/lang",
-    "/tinymce"
+    "/tinymce",
+    "/wordcount/wordcount.js"
   ],
   "scripts": {
     "build:langs": "node ./cli/lang-generator.js",
@@ -55,6 +56,7 @@
   },
   "dependencies": {
     "@brightspace-ui/core": "^1",
+    "@brightspace-ui/intl": "^3",
     "@webcomponents/webcomponentsjs": "^2",
     "lit-element": "^2",
     "tinymce": "5.5.1"
