--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,8 @@ jobs:
           persist-credentials: false
       - name: Setup Node
         uses: Brightspace/third-party-actions@actions/setup-node
+      - name: Install dependencies
+        run: npm install
       - name: Build
         run: npm run build
       - name: Semantic Release
